<resources>
    <string name="app_name">Rutas Históricas</string>
    <string name="mensaje_bienvenida">Bienvenido a la app...\n \nElige la ruta del personaje que quieras conocer:</string>
    <string name="texto_buscador">Introduce personaje o categoría</string>
    <string name="buscar">Buscar</string>
    <string name="personajes_destacados">Personajes destacados</string>
    <string name="nombre_federico">Federico García Lorca</string>
    <string name="nombre_mariana">Mariana Pineda</string>
    <string name="nombre_ganivet">Ángel Ganivet</string>
    <string name="nacimiento_federico">5 de junio de 1898, Fuente Vaqueros</string>
    <string name="fallecimiento_federico">18 de agosto de 1936, Camino de Víznar a Alfacar (Granada)</string>
    <string name="categorias_federico">poeta, dramaturgo, prosista, generación del 27</string>
    <string name="descripcion_federico">Federico García Lorca es uno de los genios de la literatura del siglo XX. Granada es Lorca, y Lorca es Granada. La vida hecha tierra; la tierra hecha obra; y la literatura convertida en una suma de sentimientos, biografía y emociones. Aquí está el poeta y sus paisajes:  Cientos de páginas, un diccionario de personajes, biografías, la música, el cine… Todo lo necesario para emprender un viaje sin fin por Lorca y Granada, por su tierra y sus metáforas.</string>
    <string name="biografia_federico">El 5 de junio de 1898 nace Federico García Lorca en Fuente Vaqueros, provincia de Granada, hijo de Federico García Rodríguez y Vicenta Lorca Romero. Será el mayor de cuatro hermanos: Francisco, Concha e Isabel.\n\nEse mismo año también nacerían otras dos grandes figuras de la literatura mundial: el americano Hemingway y el alemán Brecht.\n\nLa influencia de su región natal se encuentra en toda su obra, desde la “Primeras Canciones” hasta “La Casa de Bernarda Alba”, combinación de tradición secular y de modernismo del siglo XX.\n\nNunca perteneció a ningún movimiento literario, aunque algunas características del surrealismo se encontraron en su poesía, como las asociaciones extrañas de palabras.\n\nEn 1908 pasa unos meses en Almería, donde comienza sus estudios de bachillerato y sus primeros estudios de música. En 1909 se traslada a vivir a Granada con su familia.\n\nSus primeros estudios universitarios, Filosofía y Letras y Derecho, los realiza en Granada entre los años 1914 y 1917. En esta Universidad entabla amistad con el núcleo intelectual granadino entre los que se encuentran Melchor Fernández, Almagro, Miguel Pizarro, Manuel Ángeles Ortiz, Ismael G. de la Serna, Ángel Barrios entre otros muchos más. Empieza a realizar viajes de estudios dirigidos por el Catedrático Martín Domínguez Barrueta por Andalucía, Castilla y Galicia descubriendo así los tesoros culturales de su país. Durante esa época, Manuel de Falla fija su residencia en Granada y Federico García Lorca inicia una gran amistad con él.</string>
    <string name="url_federico">"https://federicogarcialorca.net/"</string>
    <string name="url_casa_federico">"http://www.huertadesanvicente.com/"</string>
    <string name="saber_mas">Quiero saber más</string>
    <string name="mas_informacion">Más información</string>
    <string name="mostrar_rutas">Mostrar rutas</string>
    <string name="federico_titulo_ruta_1">Ruta de Granada ciudad</string>
    <string name="federico_texto_ruta_1">Para realizar a pie y/o con transporte público. Recorre algunos de los rincones más emblemáticos y bellos de la ciudad, que además tuvieron un gran vínculo con el poeta</string>
    <string name="federico_titulo_ruta_2">Ruta del agua</string>
    <string name="federico_titulo_ruta_3">Ruta de Víznar y Alfacar</string>
    <string name="texto_curiosidad_1">Estás cerca de la Facultad de Traducción e Interpretación de Granada. ¿Sabías que los textos de Federico García Lorca han sido traducidos a idiomas como el alemán, francés, e incluso el japonés?</string>
    <string name="texto_curiosidad_2">Estás cerca de la Catedral. ¿Sabías que en Semana Santa las todas las hermandades hacen aquí su estación de penitencia?</string>
    <string name="texto_curiosidad_3">¡Has llegado al Albaycín! Prepárate para deleitarte con las vistas del Mirador de San Nicolás.</string>
    <string name="iniciar_ruta">Iniciar ruta</string>
    <string name="info">Info</string>
    <string name="nombre_pto_interes_1">Casa de Federico García Lorca</string>
    <string name="pto_interes_1">La casa de Federico se construyó en el año...</string>
    <string name="user_location_permission_explanation">Es necesario el acceso a la ubicación del dispositivo para utilizar la app.</string>
    <string name="user_location_permission_not_granted">No se han concedido permisos de ubicación, se cerrará la app.</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoibm9yYmlmaCIsImEiOiJja2hlem1scWMwenZrMzJuMWZja2dvMDdnIn0.nkx4ZOsg0v38V1kUDZPUyg</string>
    <string name="func_no_prog">Funcionalidad actualmente no disponible</string>
    <string name="continuar_ruta">Continuar ruta</string>
</resources>